# kisak-thug

./: .gitignore  CMakeLists.txt  README.md  cmake_files.cmake  rebuildxboxshaders.bat
Code/Core/: Defines.h  Defines_IDA.h  HashTable.h  LookupTable.h  Xbox_SSE.h  allmath.h  macros.h  math.h  singleton.h
Code/Core/Debug/: Assert.cpp  Checks.h  Debug.cpp
Code/Core/Math/: geometry.cpp  geometry.h  math.h  matrix.cpp  matrix.h  matrix.inl  quat.h  quat.inl  rect.h  rot90.cpp  slerp.cpp  vector.cpp  vector.h  vector.inl
Code/Core/Support/: class.cpp  class.h
Code/Core/Task/: Stack.h
Code/Gel/: mainloop.h  object.h  objtrack.h
Code/Gel/AssMan/: AssMan.cpp
Code/Gel/Collision/: BatchTriColl.h  CollCache.h  CollTriData.h  Collision.h  MovCollMan.h
Code/Gel/Components/: BouncyComponent.h  CameraComponent.cpp  CameraLookAroundComponent.cpp  CameraUtil.h  CollideAndDieComponent.cpp  FloatingLabelComponent.cpp  GunslingerCameraLookAroundComponent.cpp  GunslingerWalkComponent.cpp  (+55 more)
Code/Gfx/: BonedAnim.h  FaceMassage.cpp  NxFontMan.cpp  NxGeom.cpp  NxHierarchy.h  NxImposter.cpp  NxLight.h  NxLightMan.h  NxMesh.cpp  NxMesh.h  NxModel.h  NxNewParticle.h  NxScene.cpp  NxScene.h  NxSector.h  NxTextured3dPoly.cpp  NxViewport.h  Pose.h  Skeleton.cpp  baseanimcontroller.cpp  baseanimcontroller.h  bbox.cpp  blendchannel.cpp  blendchannel.h  camera.cpp  camera.h  debuggfx.cpp  debuggfx.h  gfxman.cpp  gfxman.h  gfxutils.cpp  nx.cpp  nx.h  nxparticle.cpp  nxparticle.h  nxweather.cpp  shadow.h  subanimcontroller.cpp  subanimcontroller.h
Code/Sk/: Main.cpp  heap_sizes.h  heap_sizes_win32.h  heap_sizes_xbox.h
Code/Sys/: McMan.h  siodev.h  timer.h
DirectX8/Inc/: d3d8.h
DirectX8_UT/Inc/: d3dx8math.h
dxvk_dx9_debug/: d3d9.exp  dxvk_d3d9.lib
kisak-thug/: Windows_THUG.exe.id2  Windows_THUG.exe.nam  backup.i64-unhandled  kisak-thug.sln
kisak-thug/kisak-thug/: WinMain.cpp  kisak-thug.vcxproj  kisak-thug.vcxproj.filters
xbox/: KisakThugX.sln  bakexboxicon.bat  kisakthug.rdf  titleimage.xbx
xbox/Bink/: readme.txt
xbox/x_exe/: x_exe.vcproj
(+450 files in other folders)
